[package]
name = "roki"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.0"
relm4 = "0.9.1"
relm4-components = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tracker = "0.2.2"
